[project]
name = "fastapi-test-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilnur",email = "ilnur.altezza@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.5,<0.15.0)"
]
