[project]
name = "fastapi-test-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilnur",email = "ilnur.altezza@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.121.3,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.5,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)"
]

# --- КОНФИГУРАЦИЯ RUFF ---

# ===========================
#  Настройки Ruff (форматирование + линтинг)
#  Ruff = сверхбыстрый линтер + сортировщик импортов + обновлятор синтаксиса
# ===========================
[tool.ruff]
# Максимальная длина строки
# Идеальный баланс — 100 символов
line-length = 100

# Исключения — папки, которые Ruff НЕ должен проверять
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",        # виртуальное окружение
    "__pycache__", # кэш Python
]

# Разрешить Ruff автоматически чинить ошибки, если ты запускаешь:
#   poetry run ruff check . --fix
fix = true


# ===========================
#  Настройки ЛИНТИНГА Ruff
#  Все правила связанные с анализом кода — в этой секции
# ===========================
[tool.ruff.lint]

# Набор правил, которые включены
# Комбинация, которую используют большинство senior-разработчиков
select = [
    "F",   # Pyflakes — реальная проверка ошибок (неиспользуемые переменные, импорты)
    "E",   # pycodestyle — ошибки по PEP8
    "W",   # pycodestyle warnings — предупреждения PEP8
    "B",   # bugbear — поиск скрытых логических ошибок
    "I",   # isort — сортировка импортов
    "UP",  # pyupgrade — обновление синтаксиса под современный Python
    "N",   # pep8-naming — имена переменных, функций, классов
    "PL",  # часть правил pylint — только полезные
]

# Правила, которые мы ОТКЛЮЧАЕМ (слишком строгие или токсичные)
ignore = [
    "PLR0913",  # слишком много аргументов у функции — иногда это нормально
    "PLR0915",  # слишком большая функция — Ruff не должен тебя ограничивать
    "PLR2004",  # запрет "магических" чисел — в реальной практике мешает
]

# Можно добавить сюда свои игнорируемые правила, если что-то будет мешать


# ===========================
#  Настройки сортировки импортов (бывший isort)
#  Важно: сейчас правильная секция — именно [tool.ruff.lint.isort]
# ===========================
[tool.ruff.lint.isort]

# Объединять импорты с 'as' в одну строку
combine-as-imports = true

# Не принуждать каждый импорт в отдельную строку
force-single-line = false

# Импортируемые пакеты, относящиеся к проекту
# Если у тебя основной модуль называется по-другому, поменяй "app"
known-first-party = ["app"]

# --- КОНФИГУРАЦИЯ MYPY ---

[tool.mypy]
# Версия Python, под которую пишем код
python_version = "3.12"

# Строгость и полезные предупреждения
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

# Чуть более строгая работа с Optional
no_implicit_optional = true

# Строго сравниваем типы в == и !=
strict_equality = true

# Не падаем из-за отсутствия type-stub'ов у внешних библиотек
ignore_missing_imports = true

# Что не проверяем
exclude = [
  "^\\.venv/",
  "^venv/",
  "^build/",
  "^dist/",
  "^migrations/",
]

# Более мягкие правила для тестов (если в проекте есть каталог tests/)
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true